--- a/l10n/po/ja_JP/_posts/2021-08-20-60th-quarkus-insights.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-08-20-60th-quarkus-insights.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-08-20-60th-quarkus-insights.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-20-60th-quarkus-insights.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: Season 3 and 60th Insights episode\n"
@@ -34,48 +34,64 @@ msgid ""
 "author: maxandersen\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: シーズン3、インサイト60回目のエピソード\n"
+"date: 2021-08-20   \n"
+"tags: insights\n"
+"synopsis: クォークス・インサイト シーズン3開始!\n"
+"author: maxandersen\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-20-60th-quarkus-insights.adoc:13
+#, fuzzy
 msgid "After a summer break and little bit of COVID-19 delay, we will finally have the 60th(!) Quarkus Insights episode on Monday the 23rd August."
-msgstr ""
+msgstr "夏休みが終わり、COVID-19の放送が少し遅れましたが、いよいよ8月23日（月）にクォークス・インサイトの60回目（！）の放送があります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-20-60th-quarkus-insights.adoc:15
+#, fuzzy
 msgid "image:60th.png[]"
-msgstr ""
+msgstr "image:60th.png[alt=60th]"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-20-60th-quarkus-insights.adoc:17
+#, fuzzy
 msgid "For those who don't know, Quarkus Insights is a (almost) weekly video/audio podcast where we host people from all parts of the Quarkiverse to sit down and talk about how to use Quarkus, what is coming next, user stories from the actual users and more!"
-msgstr ""
+msgstr "ご存知ない方のために説明しますと、Quarkus Insightsは（ほぼ）週1回のビデオ／オーディオポッドキャストで、Quarkiverseの様々な分野の方々をお招きして、Quarkusの使い方、次の展開、実際のユーザーからのユーザーストーリーなどについてお話していただいています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-20-60th-quarkus-insights.adoc:19
+#, fuzzy
 msgid "This Monday is titled \"The Rise of Platforms\" where Alexey will come by and talk about the improvements and changes we've done around the notion of Quarkus Platforms and Extensions for Quarkus 2.x."
-msgstr ""
+msgstr "今週の月曜日は「プラットフォームの台頭」と題して、Alexeyが来て、Quarkus 2.xでのQuarkusプラットフォームや拡張機能の概念に関する改善や変更について話してくれます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-20-60th-quarkus-insights.adoc:21
+#, fuzzy
 msgid "We have a whole backlog of 60 episodes which for large part are still as relevant as they were when we recorded them."
-msgstr ""
+msgstr "私たちには60話のバックログがありますが、その大部分は収録した当時と同じように関連性があります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-20-60th-quarkus-insights.adoc:23
+#, fuzzy
 msgid "You can browse and see the full list at http://quarkus.io/insights/."
-msgstr ""
+msgstr "http://quarkus.io/insights/  で全リストを閲覧・確認できます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-20-60th-quarkus-insights.adoc:25
+#, fuzzy
 msgid "Definitely worth a watch if you want to learn about Quarkus and how it is developed."
-msgstr ""
+msgstr "Quarkusとその開発方法について知りたい方は、ぜひご覧になってみてください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-20-60th-quarkus-insights.adoc:27
+#, fuzzy
 msgid "This Monday is also start of \"Season 3\" - see you there!"
-msgstr ""
+msgstr "今週の月曜日は、\"シーズン3 \"のスタートでもありますので、ぜひご覧ください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-20-60th-quarkus-insights.adoc:29
+#, fuzzy
 msgid "Have fun, Max"
-msgstr ""
+msgstr "楽しんでね、マックス"
