--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-dev-services.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-03 02:25+0000\n"
+"POT-Creation-Date: 2021-08-21 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -22,12 +22,12 @@ msgstr ""
 #. type: Title =
 #: upstream/_versions/main/guides/security-openid-connect-dev-services.adoc:6
 #, no-wrap
-msgid "Dev Services for OpenId Connect"
+msgid "Dev Services for OpenId Connect (OIDC)"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-dev-services.adoc:11
-msgid "This guide covers the Dev Services for OpenId Connect Keycloak provider and explains how to support other OpenId Connect providers."
+msgid "This guide covers the Dev Services for OpenId Connect (OIDC) Keycloak provider and explains how to support other OpenId Connect providers."
 msgstr ""
 
 #. type: Title ==
