--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-multitenancy.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-multitenancy.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-08-21 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -22,12 +22,12 @@ msgstr ""
 #. type: Title =
 #: upstream/_versions/main/guides/security-openid-connect-multitenancy.adoc:6
 #, no-wrap
-msgid "Using OpenID Connect Multi-Tenancy"
+msgid "Using OpenID Connect (OIDC) Multi-Tenancy"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-multitenancy.adoc:12
-msgid "This guide demonstrates how your OpenID Connect application can support multi-tenancy so that you can serve multiple tenants from a single application. Tenants can be distinct realms or security domains within the same OpenID Provider or even distinct OpenID Providers."
+msgid "This guide demonstrates how your OpenID Connect (OIDC) application can support multi-tenancy so that you can serve multiple tenants from a single application. Tenants can be distinct realms or security domains within the same OpenID Provider or even distinct OpenID Providers."
 msgstr ""
 
 #. type: Plain text
