--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-web-authentication.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-08-21 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -23,12 +23,14 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-web-authentication.adoc:6
 #, fuzzy, no-wrap
 #| msgid "Quarkus - Using OpenID Connect to Protect Web Applications using Authorization Code Flow."
-msgid "Using OpenID Connect to Protect Web Applications using Authorization Code Flow."
+msgid "Using OpenID Connect (OIDC) to Protect Web Applications using Authorization Code Flow."
 msgstr "Quarkus - 認可コードフローのOpenID Connectを使用してWebアプリケーションを保護"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-web-authentication.adoc:12
-msgid "This guide demonstrates how to use Quarkus OpenID Connect Extension to protect your Quarkus HTTP endpoints using OpenId Connect Authorization Code Flow supported by OpenId Connect compliant Authorization Servers such as https://www.keycloak.org/about.html[Keycloak]."
+#, fuzzy
+#| msgid "This guide demonstrates how to use Quarkus OpenID Connect Extension to protect your Quarkus HTTP endpoints using OpenId Connect Authorization Code Flow supported by OpenId Connect compliant Authorization Servers such as https://www.keycloak.org/about.html[Keycloak]."
+msgid "This guide demonstrates how to use Quarkus OpenID Connect (OIDC) Extension to protect your Quarkus HTTP endpoints using OpenId Connect Authorization Code Flow supported by OpenId Connect compliant Authorization Servers such as https://www.keycloak.org/about.html[Keycloak]."
 msgstr "このガイドでは、Quarkus OpenID Connect Extensionを使用して、 link:https://www.keycloak.org/about.html[Keycloak] などのOpenId Connect準拠の認証サーバーでサポートされているOpenId Connect 認可コードフローを使用してQuarkus HTTPエンドポイントを保護する方法を説明します。"
 
 #. type: Plain text
