--- a/l10n/po/ja_JP/_versions/main/guides/jms.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/jms.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-08-21 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -163,13 +163,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/jms.adoc:85
-msgid "Then, we need an AMQP broker. In this case we will use an ActiveMQ Artemis server.  You can follow the instructions from the https://activemq.apache.org/components/artemis/[Apache Artemis web site] or start a broker via docker:"
+msgid "Then, we need an AMQP broker. In this case we will use an Apache ActiveMQ Artemis server.  You can follow the instructions from the https://activemq.apache.org/components/artemis/[Apache Artemis web site] or start a broker via docker using the https://artemiscloud.io/[ArtemisCloud] container image:"
 msgstr ""
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/jms.adoc:89
 #, no-wrap
-msgid "docker run -it --rm -p 8161:8161 -p 61616:61616 -p 5672:5672 -e ARTEMIS_USERNAME=quarkus -e ARTEMIS_PASSWORD=quarkus vromero/activemq-artemis:2.11.0-alpine\n"
+msgid "docker run -it --rm -p 8161:8161 -p 61616:61616 -p 5672:5672 -e AMQ_USER=quarkus -e AMQ_PASSWORD=quarkus quay.io/artemiscloud/activemq-artemis-broker:0.1.4\n"
 msgstr ""
 
 #. type: Title ===
