--- a/l10n/po/ja_JP/_versions/main/guides/security-keycloak-authorization.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-keycloak-authorization.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-08-21 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -22,7 +22,7 @@ msgstr ""
 #. type: Title =
 #: upstream/_versions/main/guides/security-keycloak-authorization.adoc:6
 #, no-wrap
-msgid "Using OpenID Connect and Keycloak to Centralize Authorization"
+msgid "Using OpenID Connect (OIDC) and Keycloak to Centralize Authorization"
 msgstr ""
 
 #. type: Plain text
