Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/getting-started.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/getting-started.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-08-24 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -267,8 +267,8 @@ msgid ""
 "<dependencyManagement>\n"
 "    <dependencies>\n"
 "        <dependency>\n"
-"            <groupId>io.quarkus</groupId>\n"
-"            <artifactId>quarkus-universe-bom</artifactId>\n"
+"            <groupId>${quarkus.platform.group-id}</groupId>\n"
+"            <artifactId>quarkus-bom</artifactId>\n"
 "            <version>${quarkus.platform.version}</version>\n"
 "            <type>pom</type>\n"
 "            <scope>import</scope>\n"
@@ -284,7 +284,7 @@ msgid ""
 "<build>\n"
 "    <plugins>\n"
 "        <plugin>\n"
-"            <groupId>io.quarkus</groupId>\n"
+"            <groupId>${quarkus.platform.group-id}</groupId>\n"
 "            <artifactId>quarkus-maven-plugin</artifactId>\n"
 "            <version>${quarkus-plugin.version}</version>\n"
 "            <extensions>true</extensions>\n"
