--- a/l10n/po/ja_JP/_versions/main/guides/gradle-tooling.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/gradle-tooling.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-21 02:21+0000\n"
+"POT-Creation-Date: 2021-08-24 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -742,20 +742,24 @@ msgid ""
 "tasks.quarkusBuild {\n"
 "    nativeArgs {\n"
 "        \"container-build\" to true <1>\n"
-"        \"buildImage\" to \"quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}\" <2>\n"
-"        \"quarkus.native.java-home\" to \"/opt/java-11/\"\n"
+"        \"build-image\" to \"quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}\" <2>\n"
+"        \"java-home\" to \"/opt/java-11/\"\n"
 "    }\n"
 "}\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/gradle-tooling.adoc:391
-msgid "Set `quarkus.native.containerBuild` property to `true`"
+#, fuzzy
+#| msgid "Set `quarkus.native.containerBuild` property to `true`"
+msgid "Set `quarkus.native.container-build` property to `true`"
 msgstr "`quarkus.native.containerBuild`  プロパティーを `true`"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/gradle-tooling.adoc:392
-msgid "Set `quarkus.native.buildImage` property to `quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}`"
+#, fuzzy
+#| msgid "Set `quarkus.native.buildImage` property to `quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}`"
+msgid "Set `quarkus.native.build-image` property to `quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}`"
 msgstr "`quarkus.native.buildImage`  プロパティーを `quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}`"
 
 #. type: delimited block =
