--- a/l10n/po/ja_JP/_versions/main/guides/platform.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/platform.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-31 02:22+0000\n"
+"POT-Creation-Date: 2021-08-24 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -142,12 +142,14 @@ msgstr "文字列としては次のようになります： `<platform-bom-group
 
 #. type: Plain text
 #: upstream/_versions/main/guides/platform.adoc:51
-msgid "E.g. the coordinates of the descriptor for Quarkus BOM `io.quarkus:quarkus-bom::pom:1.2.3` will be `io.quarkus:quarkus-bom-quarkus-platform-descriptor:1.2.3:json:1.2.3`.  And for a custom Quarkus platform defined with BOM `org.acme:acme-bom::pom:555` it will be `org.acme:acme-bom-quarkus-platform-descriptor:555:json:555`."
+#, fuzzy
+#| msgid "E.g. the coordinates of the descriptor for Quarkus BOM `io.quarkus:quarkus-bom::pom:1.2.3` will be `io.quarkus:quarkus-bom-quarkus-platform-descriptor:1.2.3:json:1.2.3`.  And for a custom Quarkus platform defined with BOM `org.acme:acme-bom::pom:555` it will be `org.acme:acme-bom-quarkus-platform-descriptor:555:json:555`."
+msgid "E.g. the coordinates of the descriptor for the Quarkus BOM `io.quarkus.platform:quarkus-bom::pom:1.2.3` will be `io.quarkus.platform:quarkus-bom-quarkus-platform-descriptor:1.2.3:json:1.2.3`.  And for a custom Quarkus platform defined with BOM `org.acme:acme-bom::pom:555` it will be `org.acme:acme-bom-quarkus-platform-descriptor:555:json:555`."
 msgstr "例えば、Quarkus BOM `io.quarkus:quarkus-bom::pom:1.2.3` のディスクリプタの座標は `io.quarkus:quarkus-bom-quarkus-platform-descriptor:1.2.3:json:1.2.3` となります。また、BOM `org.acme:acme-bom::pom:555` で定義されたカスタムQuarkusプラットフォームの場合は、 `org.acme:acme-bom-quarkus-platform-descriptor:555:json:555` です。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/platform.adoc:53
-msgid "The classifier matching the version of the platform may look confusing at first. But this is what turns the descriptor into a true \"fingerprint\" of the platform. In both Maven and Gradle, the effective set of the dependency version constraints (or the managed dependencies) is obtained by merging all the imported BOMs and version constraints specified individually in the current project and also its parent(s). The artifact `classifier` is a part of the dependency ID, which could be expressed as `groupId:artifactId:classifier:type`. Which means that if a project is based on a couple of Quarkus platforms (by importing their BOMs), e.g. `io.quarkus:quarkus-universe-bom::pom:1.2.3` and `org.acme:acme-bom::pom:555`, and these two platforms are based on different `io.quarkus:quarkus-bom::pom` versions (which is technically a Quarkus platform in its turn as well), the Quarkus tools will be able to detect this fact and make the user aware of it, since it *might* not be a safe combination. If the descriptor artifact didn't include the classifer containing the version of the platform then the tools wouldn't be able to detect a potentially incompatible mix of different versions of the same platform in the same project."
+msgid "The classifier matching the version of the platform may look confusing at first. But this is what turns the descriptor into a true \"fingerprint\" of the platform. In both Maven and Gradle, the effective set of the dependency version constraints (or the managed dependencies) is obtained by merging all the imported BOMs and version constraints specified individually in the current project and also its parent(s). The artifact `classifier` is a part of the dependency ID, which could be expressed as `groupId:artifactId:classifier:type`. Which means that if a project imports a couple of BOMs, e.g. `org.apple:apple-bom::pom:1.0` and `org.orange:orange-bom::pom:1.0`, and each of these two BOMs imports a different version `io.quarkus.platform:quarkus-bom::pom`, the Quarkus tools will be able to detect this fact and make the user aware of it, since it *might* not be a safe combination. If the descriptor artifact didn't include the classifer containing the version of the platform then the tools wouldn't be able to detect a potentially incompatible mix of different versions of the same platform in the same project."
 msgstr ""
 
 #. type: Plain text
@@ -356,7 +358,9 @@ msgstr "つまり、あるプラットフォームがベースとなるプラッ
 
 #. type: Plain text
 #: upstream/_versions/main/guides/platform.adoc:161
-msgid "For example, the `quarkus-universe-bom` platform is based on the `quarkus-bom` platform. In case, the `quarkus-universe-bom` platform were to override certain properties defined in `quarkus-bom-quarkus-platform-properties` included into the `quarkus-bom` platform, the `quarkus-universe-bom` would have to be composed as"
+#, fuzzy
+#| msgid "For example, the `quarkus-universe-bom` platform is based on the `quarkus-bom` platform. In case, the `quarkus-universe-bom` platform were to override certain properties defined in `quarkus-bom-quarkus-platform-properties` included into the `quarkus-bom` platform, the `quarkus-universe-bom` would have to be composed as"
+msgid "For example, let's assume `org.acme:acme-quarkus-bom` platform extends the `io.quarkus:quarkus-bom` platform by importing its BOM. In case, the `org.acme:acme-quarkus-bom` platform were to override certain properties defined in the `io.quarkus:quarkus-bom-quarkus-platform-properties` included in the `io.quarkus:quarkus-bom`, the `org.acme:acme-quarkus-bom` would have to be composed as"
 msgstr "例えば、 `quarkus-universe-bom` プラットフォームは `quarkus-bom` プラットフォームをベースにしています。 `quarkus-universe-bom` プラットフォームが、 `quarkus-bom` プラットフォームに含まれる `quarkus-bom-quarkus-platform-properties` で定義された特定のプロパティを上書きする場合、 `quarkus-universe-bom` は次のように構成されなければなりません。"
 
 #. type: delimited block -
@@ -370,8 +374,8 @@ msgstr ""
 #: upstream/_versions/main/guides/platform.adoc:168
 #, no-wrap
 msgid ""
-"  <artifactId>quarkus-universe-bom</artifactId>\n"
-"  <name>Quarkus universe - BOM</name>\n"
+"  <artifactId>acme-quarkus-bom</artifactId>\n"
+"  <name>Acme - Quarkus - BOM</name>\n"
 "  <packaging>pom</packaging>\n"
 msgstr ""
 
@@ -381,10 +385,10 @@ msgstr ""
 msgid ""
 "  <dependencyManagement>\n"
 "    <dependencies>\n"
-"      <!-- universe platform properties -->\n"
+"      <!-- Acme Quarkus platform properties -->\n"
 "      <dependency>\n"
-"        <groupId>io.quarkus</groupId>\n"
-"        <artifactId>quarkus-universe-bom-quarkus-platform-properties</artifactId>\n"
+"        <groupId>org.acme</groupId>\n"
+"        <artifactId>acme-quarkus-bom-quarkus-platform-properties</artifactId>\n"
 "        <type>properties</type>\n"
 "        <version>${project.version}</version>\n"
 "      </dependency>\n"
@@ -394,7 +398,7 @@ msgstr ""
 #: upstream/_versions/main/guides/platform.adoc:187
 #, no-wrap
 msgid ""
-"      <!-- Quarkus Core BOM -->\n"
+"      <!-- The base Quarkus BOM -->\n"
 "      <dependency>\n"
 "        <groupId>io.quarkus</groupId>\n"
 "        <artifactId>quarkus-bom</artifactId>\n"
@@ -406,5 +410,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/platform.adoc:191
-msgid "That way, the `quarkus-universe-bom` platform properties will appear before the `quarkus-bom` platform properties and so will be dominating during merging."
+#, fuzzy
+#| msgid "That way, the `quarkus-universe-bom` platform properties will appear before the `quarkus-bom` platform properties and so will be dominating during merging."
+msgid "That way, the `org.acme:acme-quarkus-bom` platform properties will appear before those provided by the `io.quarkus:quarkus-bom` properties and so will be dominating at build time."
 msgstr "こうすることで、 `quarkus-universe-bom` のプラットフォーム・プロパティが `quarkus-bom` のプラットフォーム・プロパティよりも先に現れる為、マージの際に優先されます。"
