--- a/l10n/po/ja_JP/_versions/main/guides/cli-tooling.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/cli-tooling.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-03 02:25+0000\n"
+"POT-Creation-Date: 2021-08-24 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -296,7 +296,7 @@ msgid ""
 "+\n"
 "For example:\n"
 "+\n"
-"- Given the `2.0.0.Final` version of the CLI, specifying `-P :quarkus-universe-bom:` is equivalent to `-P io.quarkus:quarkus-universe-bom:2.0.0.Final`.\n"
+"- Given the `2.0.0.Final` version of the CLI, specifying `-P :quarkus-bom:` is equivalent to `-P io.quarkus.platform:quarkus-bom:2.0.0.Final`.\n"
 "- Specifying `-P 999-SNAPSHOT` is equivalent to `-P io.quarkus:quarkus-bom:999-SNAPSHOT`\n"
 "+\n"
 "Note: default values are subject to change. Using the `--dry-run` option will show you the computed value.\n"
