--- a/l10n/po/ja_JP/_versions/main/guides/grpc-getting-started.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/grpc-getting-started.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-17 02:18+0000\n"
+"POT-Creation-Date: 2021-08-24 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -692,9 +692,43 @@ msgid "This configuration instructs the `protobuf-maven-plugin` to generate the 
 msgstr "この設定は、Quarkusの開発経験に合わせてMutinyを使用してデフォルトのgRPCクラスとクラスを生成するように、 `protobuf-maven-plugin` に指示します。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/grpc-getting-started.adoc:390
+#: upstream/_versions/main/guides/grpc-getting-started.adoc:391
 msgid "When using `protobuf-maven-plugin`, instead of the `quarkus-maven-plugin`, every time you update the `proto` files, you need to re-generate the classes (using `mvn compile`)."
 msgstr "`quarkus-maven-plugin` の代わりに `protobuf-maven-plugin` を利用する場合、 `proto` ファイルを更新するたびに、( `mvn compile` を使用して) クラスを再生成する必要があります。"
+
+#. type: Title ==
+#: upstream/_versions/main/guides/grpc-getting-started.adoc:393
+#, no-wrap
+msgid "gRPC classes from dependencies"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/grpc-getting-started.adoc:397
+msgid "When gRPC classes - the classes generated from `proto` files - are in a dependency of the application, then the dependency needs a Jandex index.  The `jandex-maven-plugin` can be used to create a Jandex index. More information on this topic can be found in the link:cdi-reference#bean_discovery[Bean Discovery] section of the CDI guide."
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/grpc-getting-started.adoc:417
+#, no-wrap
+msgid ""
+"<build>\n"
+"    <plugins>\n"
+"        <plugin>\n"
+"            <groupId>org.jboss.jandex</groupId>\n"
+"            <artifactId>jandex-maven-plugin</artifactId>\n"
+"            <version>{jandex-maven-plugin-version}</version>\n"
+"            <executions>\n"
+"                <execution>\n"
+"                <id>make-index</id>\n"
+"                <goals>\n"
+"                    <goal>jandex</goal>\n"
+"                </goals>\n"
+"                </execution>\n"
+"            </executions>\n"
+"        </plugin>\n"
+"    </plugins>\n"
+"</build>\n"
+msgstr ""
 
 #~ msgid "Use the _blocking_ stub (also a generated class)."
 #~ msgstr "_ブロッキング_ スタブ(生成されたクラスでもあります)を使用します。"
