--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-build-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-build-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-24 02:16+0000\n"
+"POT-Creation-Date: 2021-08-25 02:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -4060,8 +4060,8 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-build-items.adoc:1362
 #, no-wrap
 msgid ""
-"`ResteasyDeployment deployment` :: +++<i>No Javadoc found</i>+++\n"
-"`String rootPath` :: +++<i>No Javadoc found</i>+++"
+"`String rootPath` :: +++<i>No Javadoc found</i>+++\n"
+"`ResteasyDeployment deployment` :: +++<i>No Javadoc found</i>+++"
 msgstr ""
 
 #. type: Table
