--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-resteasy-reactive-server.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-resteasy-reactive-server.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-08-25 02:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -57,3 +57,27 @@ msgstr ""
 #, no-wrap
 msgid "string"
 msgstr "string"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-resteasy-reactive-server.adoc:26
+#, no-wrap
+msgid ""
+"[[quarkus-resteasy-reactive-server_quarkus.resteasy-reactive.multipart.input-part.default-charset]]`link:#quarkus-resteasy-reactive-server_quarkus.resteasy-reactive.multipart.input-part.default-charset[quarkus.resteasy-reactive.multipart.input-part.default-charset]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Default charset.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-resteasy-reactive-server.adoc:28
+#, no-wrap
+msgid "link:https://docs.oracle.com/javase/8/docs/api/java/nio/charset/Charset.html[Charset]"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-resteasy-reactive-server.adoc:30
+#, no-wrap
+msgid "`UTF-8`"
+msgstr ""
