--- a/l10n/po/ja_JP/_versions/main/guides/building-native-image.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/building-native-image.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-18 02:16+0000\n"
+"POT-Creation-Date: 2021-08-25 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1067,21 +1067,10 @@ msgstr ""
 msgid "In certain circumstances, you may want to build the native image in a separate step.  For example, in a CI/CD pipeline, you may want to have one step to generate the source that will be used for the native image generation and another step to use these sources to actually build the native executable.  For this use case, you can set the `quarkus.package.type=native-sources`.  This will execute the java compilation as if you would have started native compilation (`-Pnative`), but stops before triggering the actual call to GraalVM's `native-image`."
 msgstr ""
 
-#. type: Plain text
-#: upstream/_versions/main/guides/building-native-image.adoc:635
-#: upstream/_versions/main/guides/building-native-image.adoc:642
-#: upstream/_versions/main/guides/building-native-image.adoc:653
-#: upstream/_versions/main/guides/building-native-image.adoc:669
-#, no-wrap
-msgid "---\n"
-msgstr ""
-
-#. type: Plain text
+#. type: delimited block -
 #: upstream/_versions/main/guides/building-native-image.adoc:637
 #, no-wrap
-msgid ""
-"$ ./mvnw clean package -Dquarkus.package.type=native-sources\n"
-"---\n"
+msgid "$ ./mvnw clean package -Dquarkus.package.type=native-sources\n"
 msgstr ""
 
 #. type: Plain text
@@ -1089,22 +1078,21 @@ msgstr ""
 msgid "After compilation has finished, you find the build artifact in `target/native-sources`:"
 msgstr ""
 
-#. type: Plain text
+#. type: delimited block -
 #: upstream/_versions/main/guides/building-native-image.adoc:646
 #, no-wrap
 msgid ""
 "$ cd target/native-sources\n"
 "$ ls\n"
-"native-image.args  getting-started-1.0.0-SNAPSHOT-runner.jar\n"
-"---\n"
+"native-image.args  getting-started-1.0.0-SNAPSHOT-runner.jar lib\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/building-native-image.adoc:651
-msgid "You see that, beside the expected JAR, a file `native-image.args` was created.  This file holds all parameters (including the name of the JAR to compile) to pass along to GraalVM's `native-image` command.  If you have GraalVM installed, you can start the native compilation by executing:"
+msgid "From the output above one can see that, in addition to the produced jar file and the associated lib directory, a text file named `native-image.args` was created.  This file holds all parameters (including the name of the JAR to compile) to pass along to GraalVM's `native-image` command.  If you have GraalVM installed, you can start the native compilation by executing:"
 msgstr ""
 
-#. type: Plain text
+#. type: delimited block -
 #: upstream/_versions/main/guides/building-native-image.adoc:662
 #, no-wrap
 msgid ""
@@ -1116,7 +1104,6 @@ msgid ""
 "getting-started-1.0.0-SNAPSHOT-runner\n"
 "getting-started-1.0.0-SNAPSHOT-runner.build_artifacts.txt\n"
 "getting-started-1.0.0-SNAPSHOT-runner.jar\n"
-"---\n"
 msgstr ""
 
 #. type: Plain text
@@ -1129,7 +1116,7 @@ msgstr ""
 msgid "Running the build process in a container is also possible:"
 msgstr ""
 
-#. type: Plain text
+#. type: delimited block -
 #: upstream/_versions/main/guides/building-native-image.adoc:679
 #, no-wrap
 msgid ""
@@ -1142,7 +1129,6 @@ msgid ""
 "  --entrypoint bin/sh \\\n"
 "  quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor} \\ <3>\n"
 "  -c \"native-image $(cat native-image.args) -J-Xmx4g\" <4>\n"
-"---\n"
 msgstr ""
 
 #. type: Plain text
@@ -1162,52 +1148,42 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/building-native-image.adoc:685
-msgid "Call `native-image` with the content of file `native-image.args` as arguments. We also supply an additional argument to limit the process's maximum memory limitation to 4 Gigabyte."
+msgid "Call `native-image` with the content of file `native-image.args` as arguments. We also supply an additional argument to limit the process's maximum memory to 4 Gigabytes (this may vary depending on the project being built and the machine building it)."
 msgstr ""
 
-#. type: Plain text
-#: upstream/_versions/main/guides/building-native-image.adoc:687
-msgid "In a CI/CD setup, we would:"
-msgstr ""
-
-#. type: Plain text
-#: upstream/_versions/main/guides/building-native-image.adoc:689
-msgid "register the output of the step executing `./mvnw ...` command (i.e. directory `target/native-image`) as build artifact,"
-msgstr ""
-
-#. type: Plain text
+#. type: delimited block =
 #: upstream/_versions/main/guides/building-native-image.adoc:690
-msgid "require this artifact in the step executing the `native-image ...` command, and"
-msgstr ""
-
-#. type: Plain text
-#: upstream/_versions/main/guides/building-native-image.adoc:691
-msgid "register the output of the step executing the `native-image ...` command (i.e. files matching `target/*runner`) as build artifact."
+msgid "If you are running on a Windows machine, please keep in mind that the binary was created within a Linux docker container.  Hence, the binary will not be executable on the host Windows machine."
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/building-native-image.adoc:693
-msgid "The environment executing `1` only needs access to a Java- and a Maven- (or Gradle)-installation, while the environment executing `3` only needs access to a GraalVM installation (including the `native-image` feature)."
+msgid "A high level overview of what the various steps of a CI/CD pipeline would look is the following:"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/building-native-image.adoc:695
-msgid "The generated binary can then be used to create a container image, as explained above."
+msgid "Register the output of the step executing `./mvnw ...` command (i.e. directory `target/native-image`) as a build artifact,"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/building-native-image.adoc:696
+msgid "Require this artifact in the step executing the `native-image ...` command, and"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/building-native-image.adoc:697
-#, no-wrap
-msgid "===\n"
+msgid "Register the output of the step executing the `native-image ...` command (i.e. files matching `target/*runner`) as build artifact."
 msgstr ""
 
 #. type: Plain text
-#: upstream/_versions/main/guides/building-native-image.adoc:700
-#, no-wrap
-msgid ""
-"If you are running on a Windows machine, please keep in mind that the binary was created within a Linux docker container.\n"
-"Hence, the binary will not be executable on the host Windows machine.\n"
-"===\n"
+#: upstream/_versions/main/guides/building-native-image.adoc:699
+msgid "The environment executing step `1` only needs Java and Maven (or Gradle) installed, while the environment executing step `3` only needs a GraalVM installation (including the `native-image` feature)."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/building-native-image.adoc:701
+msgid "Depending on what the final desired output of the CI/CD pipeline is, the generated binary might then be used to create a container image."
 msgstr ""
 
 #. type: Plain text
