Update .po files

--- a/l10n/po/ja_JP/README.md.po
+++ b/l10n/po/ja_JP/README.md.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-02 14:41+0900\n"
+"POT-Creation-Date: 2021-08-25 09:11+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -173,7 +173,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "- create an author entry in [_data/authors.yaml](https://github.com/quarkusio/quarkusio.github.io/blob/develop/_data/authors.yaml)\n"
-"    - `emailhash` is used to fetch your picture form the Gravatar service\n"
+"    - `emailhash` you can get by running `echo your@email.org | md5` using an email you have registered from the [Gravatar service](https://gravatar.com),\n"
 "- create an blog entry under [_posts](https://github.com/quarkusio/quarkusio.github.io/tree/develop/_posts)\n"
 "    -the file name is `yyyy-mm-dd-slug.adoc`\n"
 "- `tags` should be used with some care as an archive page is created for of them. Below are some basic rules to try follow:\n"
