--- a/l10n/po/ja_JP/_versions/main/guides/amqp.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/amqp.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-20 02:24+0000\n"
+"POT-Creation-Date: 2021-08-26 02:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -173,7 +173,7 @@ msgstr ""
 #: upstream/_versions/main/guides/amqp.adoc:70
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=amqp-quickstart-producer \\\n"
 "    -DnoCode=true \\\n"
@@ -204,7 +204,7 @@ msgstr ""
 #: upstream/_versions/main/guides/amqp.adoc:86
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=amqp-quickstart-processor \\\n"
 "    -DnoCode=true \\\n"
