--- a/l10n/po/ja_JP/_versions/main/guides/deploying-to-heroku.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/deploying-to-heroku.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-25 02:18+0000\n"
+"POT-Creation-Date: 2021-08-26 02:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -162,7 +162,7 @@ msgstr ""
 #: upstream/_versions/main/guides/deploying-to-heroku.adoc:64
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=code-with-quarkus-on-heroku \\\n"
 "    -DclassName=\"org.acme.getting.started.GreetingResource\" \\\n"
