--- a/l10n/po/ja_JP/_versions/main/guides/funqy-gcp-functions.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/funqy-gcp-functions.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-08-26 02:16+0000\n"
 "PO-Revision-Date: 2021-05-12 13:32+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -115,7 +115,7 @@ msgstr "`quarkus-funqy-google-cloud-functions` のエクステンションを持
 #: upstream/_versions/main/guides/funqy-gcp-functions.adoc:53
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=funqy-google-cloud-functions \\\n"
 "    -DclassName=\"org.acme.quickstart.GreetingResource\" \\\n"
