--- a/l10n/po/ja_JP/_versions/main/guides/jms.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/jms.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-21 02:20+0000\n"
+"POT-Creation-Date: 2021-08-26 02:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -131,7 +131,7 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 #: upstream/_versions/main/guides/jms.adoc:69
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=jms-quickstart \\\n"
 "    -DclassName=\"org.acme.jms.PriceResource\" \\\n"
@@ -643,7 +643,7 @@ msgstr "以下のコマンドで新規プロジェクトを作成します。"
 #: upstream/_versions/main/guides/jms.adoc:372
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=jms-quickstart \\\n"
 "    -DclassName=\"org.acme.jms.PriceResource\" \\\n"
