--- a/l10n/po/ja_JP/_versions/main/guides/kafka-reactive-getting-started.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kafka-reactive-getting-started.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-08-26 02:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -157,7 +157,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:63
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=kafka-quickstart-producer \\\n"
 "    -DnoCode=true \\\n"
@@ -188,7 +188,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:79
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=kafka-quickstart-processor \\\n"
 "    -DnoCode=true \\\n"
