--- a/l10n/po/ja_JP/_versions/main/guides/kafka-streams.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kafka-streams.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-08-26 02:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -206,7 +206,7 @@ msgstr "まず、温度値プロデューサを持つ新しいプロジェクト
 #: upstream/_versions/main/guides/kafka-streams.adoc:93
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=kafka-streams-quickstart-producer \\\n"
 "    -Dextensions=\"kafka\" \\\n"
@@ -484,7 +484,7 @@ msgstr "プロデューサアプリケーションを用意したら、Kafka Str
 #: upstream/_versions/main/guides/kafka-streams.adoc:245
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=kafka-streams-quickstart-aggregator \\\n"
 "    -Dextensions=\"resteasy,kafka-streams,resteasy-jackson\" \\\n"
