--- a/l10n/po/ja_JP/_versions/main/guides/reactive-sql-clients.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/reactive-sql-clients.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-05 02:19+0000\n"
+"POT-Creation-Date: 2021-08-26 02:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -161,7 +161,7 @@ msgstr "まず、プロジェクトで `quarkus-reactive-pg-client` のエクス
 #: upstream/_versions/main/guides/reactive-sql-clients.adoc:75
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=reactive-pg-client-quickstart \\\n"
 "    -DclassName=\"org.acme.vertx.FruitResource\" \\\n"
