--- a/l10n/po/ja_JP/_versions/main/guides/smallrye-health.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/smallrye-health.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-24 02:18+0000\n"
+"POT-Creation-Date: 2021-08-26 02:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -112,9 +112,15 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/smallrye-health.adoc:55
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+#| "    -DprojectGroupId=org.acme \\\n"
+#| "    -DprojectArtifactId=microprofile-health-quickstart \\\n"
+#| "    -Dextensions=\"smallrye-health\"\n"
+#| "cd microprofile-health-quickstart\n"
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=microprofile-health-quickstart \\\n"
 "    -Dextensions=\"smallrye-health\"\n"
