--- a/l10n/po/ja_JP/_versions/main/guides/tika.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/tika.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-08-26 02:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -130,9 +130,17 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/tika.adoc:66
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+#| "    -DprojectGroupId=org.acme.example \\\n"
+#| "    -DprojectArtifactId=tika-quickstart \\\n"
+#| "    -DclassName=\"org.acme.tika.TikaParserResource\" \\\n"
+#| "    -Dpath=\"/parse\" \\\n"
+#| "    -Dextensions=\"tika,resteasy\"\n"
+#| "cd tika-quickstart\n"
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme.example \\\n"
 "    -DprojectArtifactId=tika-quickstart \\\n"
 "    -DclassName=\"org.acme.tika.TikaParserResource\" \\\n"
