--- a/l10n/po/ja_JP/_versions/main/guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/writing-extensions.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-13 02:19+0000\n"
+"POT-Creation-Date: 2021-08-26 02:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -797,7 +797,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/writing-extensions.adoc:385
-msgid "You may want to use the `create-extension` mojo of `io.quarkus:quarkus-maven-plugin` to create these Maven modules - see the next section."
+msgid "You may want to use the `create-extension` mojo of `io.quarkus.platform:quarkus-maven-plugin` to create these Maven modules - see the next section."
 msgstr ""
 
 #. type: Plain text
@@ -946,7 +946,7 @@ msgstr "将来的には他のレイアウトタイプを導入する可能性が
 
 #. type: Plain text
 #: upstream/_versions/main/guides/writing-extensions.adoc:488
-msgid "You may not specify any parameter to use the interactive mode: `mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create-extension -N`"
+msgid "You may not specify any parameter to use the interactive mode: `mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create-extension -N`"
 msgstr ""
 
 #. type: Plain text
@@ -960,7 +960,7 @@ msgstr ""
 msgid ""
 "git clone https://github.com/quarkusio/quarkus.git\n"
 "cd quarkus\n"
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create-extension -N \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create-extension -N \\\n"
 "    -DextensionId=my-ext \\\n"
 "    -Dname=\"My Extension\"\n"
 msgstr ""
@@ -4300,7 +4300,7 @@ msgstr ""
 #: upstream/_versions/main/guides/writing-extensions.adoc:2225
 #, no-wrap
 msgid ""
-"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=rest-json \\\n"
 "    -DclassName=\"org.acme.rest.json.FruitResource\" \\\n"
